--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,23 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# STM stuff
+
+# Misc
+*.map
+*.m
+*.png
+
+# Eclipse CDT project files
+.settings/
+
+# Vagrant directory
+.vagrant/
+
+# Include makefiles
+!Makefile
+*~
+
+# Libraries
+/lib
